fix(payment): Add paginated admin transactions and generic extends check